짝수와 홀수.md

--- a/level 1/직사각형 별찍기.md
+++ b/level 1/직사각형 별찍기.md
@@ -6,43 +6,27 @@
 ### **⚠제한사항**
 n과 m은 각각 1000 이하인 자연수입니다.
 ### **입출력 예**
-![](https://velog.velcdn.com/images/ssori0421/post/5295a817-9e8c-401a-a4a2-d10f739d4a4e/image.png)
+![](https://velog.velcdn.com/images/ssori0421/post/17e87f8b-2d15-4823-a04a-8b7588bf4d55/image.png)
+
 ## **🧐CODE REVIEW**
 
 ### **🧾나의 풀이**
 
-```jsprocess.stdin.setEncoding('utf8');
-process.stdin.on('data', data => {
-    const n = data.split(" ");
-    const a = Number(n[0]), b = Number(n[1]);
-    const star = `${'*'.repeat(a)}\n`;
-    
-    console.log(star.repeat(b));
- 
-});
+```jsprocess
+function solution(num) {
+if (num % 2 === 0) {
+    return 'Even'
+} else {
+    return 'Odd'
+}
+}
 ```
 
 #### **📝해설**
 
-```js
-const star = `${'*'.repeat(a)}\n`;
-    
-    console.log(star.repeat(b));
-```
-repeat()함수: 주어진 문자열을 옵션의 count만큼 반복하여 붙인 다음에 새로운 문자열로 반환하는 함수.
-
-
-*을 a개 반복하고 줄바꿔서 b번 반복하면 axb 형태의 직사각형으로 별을 채울수 있다.  
-
-
-### **🔖정리**
-
-1. repeat()함수에 대해 알게 되었다.
+num을 받아서 2로 나눠 나머지가 0이면 짝수, 그렇지 않으면 홀수를 리턴한다.
 
 ## 📚참고 사이트
 
 - **🔗문제 링크**<br/>
-https://school.programmers.co.kr/learn/courses/30/lessons/12969
-
-- **[제목]**<br/>
-https://redcow77.tistory.com/629
+https://school.programmers.co.kr/learn/courses/30/lessons/12937
