--- a/level 1/직사각형 별찍기.md
+++ b/level 1/직사각형 별찍기.md
@@ -26,7 +26,24 @@ if (num % 2 === 0) {
 
 num을 받아서 2로 나눠 나머지가 0이면 짝수, 그렇지 않으면 홀수를 리턴한다.
 
+### **🧾다른 풀이**
+
+```jsprocess
+function evenOrOdd(num) {
+  return num % 2 ? "Odd" : "Even";
+}
+```
+
+#### **📝해설**
+조건(삼항)연산자를 이용한 간단한 풀이.
+조건 (삼항) 연산자는 JavaScript에서 세 개의 피연산자를 받는 유일한 연산자. 앞에서부터 조건문, 물음표(?), 조건문이 참(truthy)일 경우 실행할 표현식, 콜론(:), 조건문이 거짓(falsy)일 경우 실행할 표현식이 배치된다. 해당 연산자는 if...else문의 대체재로 빈번히 사용된다.
+### **🔖정리**
+
+1. if...else 문의 대체로 조건(삼항)연산자를 사용하여 조건문을 간단하게 쓰는 방법을 알게 되었다.
 ## 📚참고 사이트
 
 - **🔗문제 링크**<br/>
 https://school.programmers.co.kr/learn/courses/30/lessons/12937
+
+- **[제목]**<br/>
+https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Conditional_Operator
