수정) 짝수와 홀수.md

--- a/level 1/짝수와 홀수.md
+++ b/level 1/짝수와 홀수.md
@@ -6,269 +6,44 @@
 - num은 int 범위의 정수입니다.
 - 0은 짝수입니다.
 ### **입출력 예**
+![](https://velog.velcdn.com/images/ssori0421/post/17e87f8b-2d15-4823-a04a-8b7588bf4d55/image.png)
 
 ## **🧐CODE REVIEW**
 
-### **😫나의 오답 풀이**
-
 ### **🧾나의 풀이**
 
-```js
+```jsprocess
+function solution(num) {
+if (num % 2 === 0) {
+    return 'Even'
+} else {
+    return 'Odd'
+}
+}
 ```
 
 #### **📝해설**
 
-```js
-```
+num을 받아서 2로 나눠 나머지가 0이면 짝수, 그렇지 않으면 홀수를 리턴한다.
 
-#### **😅개선점**
+### **🧾다른 풀이**
 
-1. `for i in range():` 
-
-### **다른 풀이**
-
-```js
-```
-
-#### **📝해설**
-
-```js
-```
-# 문제 제목
-
-## **📝문제 설명**
-
-### **⚠제한사항**
-
-### **입출력 예**
-
-## **🧐CODE REVIEW**
-
-### **😫나의 오답 풀이**
-
-### **🧾나의 풀이**
-
-```js
+```jsprocess
+function evenOrOdd(num) {
+  return num % 2 ? "Odd" : "Even";
+}
 ```
 
 #### **📝해설**
-
-```js
-```
-
-#### **😅개선점**
-
-1. `for i in range():` 
-
-### **다른 풀이**
-
-```js
-```
-
-#### **📝해설**
-
-```js
-```
-
+조건(삼항)연산자를 이용한 간단한 풀이.
+조건 (삼항) 연산자는 JavaScript에서 세 개의 피연산자를 받는 유일한 연산자. 앞에서부터 조건문, 물음표(?), 조건문이 참(truthy)일 경우 실행할 표현식, 콜론(:), 조건문이 거짓(falsy)일 경우 실행할 표현식이 배치된다. 해당 연산자는 if...else문의 대체재로 빈번히 사용된다.
 ### **🔖정리**
 
-1. 배운점
-
+1. if...else 문의 대체로 조건(삼항)연산자를 사용하여 조건문을 간단하게 쓰는 방법을 알게 되었다.
 ## 📚참고 사이트
 
 - **🔗문제 링크**<br/>
-사이트 주소
+https://school.programmers.co.kr/learn/courses/30/lessons/12937
 
 - **[제목]**<br/>
-사이트 주소# 문제 제목
-
-## **📝문제 설명**
-
-### **⚠제한사항**
-
-### **입출력 예**
-
-## **🧐CODE REVIEW**
-
-### **😫나의 오답 풀이**
-
-### **🧾나의 풀이**
-
-```js
-```
-
-#### **📝해설**
-
-```js
-```
-
-#### **😅개선점**
-
-1. `for i in range():` 
-
-### **다른 풀이**
-
-```js
-```
-
-#### **📝해설**
-
-```js
-```
-
-### **🔖정리**
-
-1. 배운점
-
-## 📚참고 사이트
-
-- **🔗문제 링크**<br/>
-사이트 주소
-
-- **[제목]**<br/>
-사이트 주소
-### **🔖정리**
-
-1. 배운점
-
-## 📚참고 사이트
-
-- **🔗문제 링크**<br/>
-사이트 주소
-
-- **[제목]**<br/>
-사이트 주소
-
-### **입출력 예**
-
-## **🧐CODE REVIEW**
-
-### **😫나의 오답 풀이**
-
-### **🧾나의 풀이**
-
-```js
-```
-
-#### **📝해설**
-
-```js
-```
-
-#### **😅개선점**
-
-1. `for i in range():` 
-
-### **다른 풀이**
-
-```js
-```
-
-#### **📝해설**
-
-```js
-```
-
-### **🔖정리**
-
-1. 배운점
-
-## 📚참고 사이트
-
-- **🔗문제 링크**<br/>
-사이트 주소
-
-- **[제목]**<br/>
-사이트 주소# 문제 제목
-
-## **📝문제 설명**
-
-### **⚠제한사항**
-
-### **입출력 예**
-
-## **🧐CODE REVIEW**
-
-### **😫나의 오답 풀이**
-
-### **🧾나의 풀이**
-
-```js
-```
-
-#### **📝해설**
-
-```js
-```
-
-#### **😅개선점**
-
-1. `for i in range():` 
-
-### **다른 풀이**
-
-```js
-```
-
-#### **📝해설**
-
-```js
-```
-
-### **🔖정리**
-
-1. 배운점
-
-## 📚참고 사이트
-
-- **🔗문제 링크**<br/>
-사이트 주소
-
-- **[제목]**<br/>
-사이트 주소# 문제 제목
-
-## **📝문제 설명**
-
-### **⚠제한사항**
-
-### **입출력 예**
-
-## **🧐CODE REVIEW**
-
-### **😫나의 오답 풀이**
-
-### **🧾나의 풀이**
-
-```js
-```
-
-#### **📝해설**
-
-```js
-```
-
-#### **😅개선점**
-
-1. `for i in range():` 
-
-### **다른 풀이**
-
-```js
-```
-
-#### **📝해설**
-
-```js
-```
-
-### **🔖정리**
-
-1. 배운점
-
-## 📚참고 사이트
-
-- **🔗문제 링크**<br/>
-사이트 주소
-
-- **[제목]**<br/>
-사이트 주소
+https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Conditional_Operator
