수정)직사각형 별찍기

--- a/level 1/직사각형 별찍기.md
+++ b/level 1/직사각형 별찍기.md
@@ -6,44 +6,39 @@
 ### **⚠제한사항**
 n과 m은 각각 1000 이하인 자연수입니다.
 ### **입출력 예**
-![](https://velog.velcdn.com/images/ssori0421/post/17e87f8b-2d15-4823-a04a-8b7588bf4d55/image.png)
+![](https://velog.velcdn.com/images/ssori0421/post/17df7db0-f71f-4672-bead-41e5b5a91efa/image.png)
 
 ## **🧐CODE REVIEW**
 
 ### **🧾나의 풀이**
 
 ```jsprocess
-function solution(num) {
-if (num % 2 === 0) {
-    return 'Even'
-} else {
-    return 'Odd'
-}
-}
+rocess.stdin.setEncoding('utf8');
+process.stdin.on('data', data => {
+    const n = data.split(" ");
+    const a = Number(n[0]), b = Number(n[1]);
+    const star = `${'*'.repeat(a)}\n`;
+
+    console.log(star.repeat(b));
+});
 ```
 
 #### **📝해설**
-
-num을 받아서 2로 나눠 나머지가 0이면 짝수, 그렇지 않으면 홀수를 리턴한다.
-
-### **🧾다른 풀이**
-
 ```jsprocess
-function evenOrOdd(num) {
-  return num % 2 ? "Odd" : "Even";
-}
+ const star = `${'*'.repeat(a)}\n`;
+ console.log(star.repeat(b));
 ```
+repeat()함수는 주어진 문자열을 옵션의 cont만큼 반복하여 붙인 다음 새로운 문자열로 반환하는 함수이다. 
 
-#### **📝해설**
-조건(삼항)연산자를 이용한 간단한 풀이.
-조건 (삼항) 연산자는 JavaScript에서 세 개의 피연산자를 받는 유일한 연산자. 앞에서부터 조건문, 물음표(?), 조건문이 참(truthy)일 경우 실행할 표현식, 콜론(:), 조건문이 거짓(falsy)일 경우 실행할 표현식이 배치된다. 해당 연산자는 if...else문의 대체재로 빈번히 사용된다.
+따라서 *을 a번 반복하여 새로운 문자열을 만들고 그 문자열열을 b반복하면 axb 형태의 직사각형 별찍기를 완성할 수 있다.
+
 ### **🔖정리**
 
-1. if...else 문의 대체로 조건(삼항)연산자를 사용하여 조건문을 간단하게 쓰는 방법을 알게 되었다.
+1. repeat()함수에 대해 알게 되었다.
 ## 📚참고 사이트
 
 - **🔗문제 링크**<br/>
-https://school.programmers.co.kr/learn/courses/30/lessons/12937
+https://school.programmers.co.kr/learn/courses/30/lessons/12969
 
 - **[제목]**<br/>
-https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Conditional_Operator
+https://redcow77.tistory.com/629
