--- a/level 1/직사각형 별찍기.md
+++ b/level 1/직사각형 별찍기.md
@@ -13,7 +13,7 @@ n과 m은 각각 1000 이하인 자연수입니다.
 ### **🧾나의 풀이**
 
 ```jsprocess
-rocess.stdin.setEncoding('utf8');
+process.stdin.setEncoding('utf8');
 process.stdin.on('data', data => {
     const n = data.split(" ");
     const a = Number(n[0]), b = Number(n[1]);
