최대공약수와 최소공배수.md

--- a/level 1/행렬의 덧셈.md
+++ b/level 1/행렬의 덧셈.md
@@ -11,16 +11,14 @@
 ### **🧾나의 풀이**
 
 ```js
-function solution(arr1, arr2) {
-    let answer = []
-    for ( let i = 0; i < arr1.length; i++ ) {
-        let sumArr = []
-        for ( let j = 0; j < arr1[i].length; j++) {
-            sumArr.push(arr1[i][j] + arr2[i][j])
+function solution(n, m) {
+    let gcd = 1
+    for (let i = 2; i <= Math.min(n,m); i++) {
+        if( n % i === 0 && m % i === 0) {
+            gcd = i
         }
-        answer.push(sumArr);
-    }
-    return answer
+    } 
+    return [gcd, n*m/gcd]
 }
 ```
 
