--- a/level 1/삼총사.md
+++ b/level 1/삼총사.md
@@ -30,7 +30,7 @@ function solution(number) {
 ```
 
 #### **📝해설**
-중첩 반복문을 이용해서 내용을 수행하도록 함
+주어진 코드는 "solution"이라는 이름의 함수를 정의하며, 단일 인자 "number"를 받습니다. 그리고 "sum"이라는 변수를 0으로 초기화하고, 세 개의 중첩된 루프를 사용하여 입력 "number" 배열의 모든 가능한 세 개의 수의 조합을 확인하며, 합이 0인 경우 "sum"에 1을 추가합니다. 마지막으로 "sum"의 값을 반환합니다.
 
 ## 📚참고 사이트
 
