--- a/level 1/같은 숫자는 싫어.md
+++ b/level 1/같은 숫자는 싫어.md
@@ -29,7 +29,7 @@ function solution(arr)
 ```
 
 #### **📝해설**
-arr 배열의 length번 체크하도록 for문을 돌리고 i번째와 i+1번째의 숫자가 같지 않을 때 answer배열에 i를 push 해준다.
+주어진 코드는 "solution"이라는 이름의 함수를 정의하며, 단일 인자 "arr"을 받습니다. 함수는 빈 배열 "answer"를 초기화하고, 입력 "arr"의 모든 요소를 반복하며 현재 요소와 다음 요소가 다른 경우에만 현재 요소를 "answer" 배열에 추가합니다. 마지막으로 "answer" 배열을 반환합니다.
 
 ## 📚참고 사이트
 
